# purerecipes

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  vetur.config.js
backend/: .air.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  go.mod  go.sum  main.py  pyproject.toml
backend/cmd/: main.go
backend/internal/: __init__.py
backend/pkg/login/: manager.go  route.go  store.go
backend/pkg/rest/: router.go
backend/pkg/scrape/: manager.go  route.go
backend/scripts/: migrate.sh  startdb.sh
backend/server/: main.py  managers.py  router.py
backend/server/scrape/: __init__.py  managers.py  routes.py  schemas.py  services.py
backend/server/url/: routes.py  schemas.py
frontend/: Dockerfile.dev  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: auth.js  constants.js  index.js  recipes.js  recipes.ts  scrape.js
frontend/src/components/: Button.vue  Categories.vue  Category.vue  Checkbox.vue  ComponentWrapper.vue  Featured.vue  Header.vue  InputText.vue  Modal.vue  Overlay.vue  RecipeCard.vue  SearchBar.vue  Toast.vue
frontend/src/router/: index.js  index.ts  kitchen-sink.js
frontend/src/types/: Category.ts  Recipe.ts
frontend/src/views/: Home.vue  Login.vue  Recipe.vue  Scrape.vue  SignUp.vue
frontend/src/views/kitchen-sink/: Index.vue  KS_Button.vue  KS_Checkbox.vue  KS_InputText.vue  KS_Modal.vue  KS_Toast.vue
