[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jesse Viola <jesse.viola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
beautifulsoup4 = "^4.10.0"
black = "^22.1.0"
mypy = "^0.941"
lxml = "^4.8.0"
requests = "^2.27.1"
recipe-scrapers = { git = "https://github.com/jesse-viola/recipe-scrapers.git", branch = "main" }
extruct = "^0.13.0"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
